updation of oneko

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     
-    <!-- Oneko Cat Animation -->
+    <!-- Oneko Pixel Pet -->
     <script src="/oneko/oneko.js"></script>
   </body>
 </html>
