--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       onload="this.onload=null;this.rel='stylesheet'"
     />
     
+    <!-- Indian Language Fonts for Loading Screen -->
+    <link 
+      rel="preload" 
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Noto+Sans+Tamil:wght@400;700&family=Noto+Sans+Devanagari:wght@400;700&family=Noto+Sans+Telugu:wght@400;700&family=Noto+Sans+Kannada:wght@400;700&family=Noto+Sans+Malayalam:wght@400;700&family=Noto+Sans+Bengali:wght@400;700&family=Noto+Sans+Gujarati:wght@400;700&family=Noto+Sans+Gurmukhi:wght@400;700&family=Noto+Sans+Oriya:wght@400;700&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    
     <title>Sakthi Murugan | Digital Notebook Portfolio</title>
   </head>
   <body>
