--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       onload="this.onload=null;this.rel='stylesheet'"
     />
     
-    <title>Sakthi Murugan | Digital Notebook Portfolio</title>
+    <title>Sakthi Murugan | Digital Space</title>
   </head>
   <body>
     <div id="root"></div>
