--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/images/avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Digital notebook portfolio of Sakthi Murugan - A creative showcase of projects and skills" />
+    <meta name="description" content="Stealth Protocol Portfolio of Sakthi Murugan - Security Researcher & Developer" />
     <meta name="theme-color" content="#fdfdf9" />
     <meta name="color-scheme" content="light dark" />
     
